--- a/index.html
+++ b/index.html
@@ -209,7 +209,9 @@
       </span>
     </a>
     <div class="toc-wrapper">
-      <img src="images/logo.png" class="logo" alt="Logo" />
+      <div class="logo-wrapper">
+        <img src="images/logo.png" class="logo" alt="Logo" />
+      </div>
         <div class="lang-selector">
               <a href="#" data-language-name="shell">shell</a>
         </div>
